--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "localstorage": "^1.0.1",
     "mongoose": "^8.4.3",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
